r 4807 in commercial: Prevent billing errors on non-PDU messages from the relay.
r 4761 in commercial:
Add support for billing messages when arriving with content type of plain text and not to smsc short code.

r4664 in commercial:
Add tariff column (along with total tariff) and service type column to CDR.

r4663 in commercial:
Merge billing feature branch to trunk.

--- a/software/public/smqueue/trunk/SR/Makefile.am
+++ b/software/public/smqueue/trunk/SR/Makefile.am
@@ -25,20 +25,20 @@ AM_CPPFLAGS = $(STD_DEFINES_AND_INCLUDES)
 AM_CXXFLAGS = $(STD_DEFINES_AND_INCLUDES) -Wall -ldl -lpthread
 
 EXTRA_DIST = \
-	README.HLR \
+	README.SR \
 	maketables.sql
 
-noinst_LTLIBRARIES = libHLR.la
+noinst_LTLIBRARIES = libSR.la
 
-libHLR_la_SOURCES = \
+libSR_la_SOURCES = \
        SubscriberRegistry.cpp
 
 noinst_PROGRAMS = \
-	HLRTest
+	SRTest
 
 noinst_HEADERS = \
        SubscriberRegistry.h
 
-HLRTest_LDADD =  libHLR.la $(COMMON_LA) $(SQLITE_LA)
-HLRTest_SOURCES = HLRTest.cpp
+SRTest_LDADD =  libSR.la $(COMMON_LA) $(SQLITE_LA)
+SRTest_SOURCES = SRTest.cpp
 
