--- a/software/public/smqueue/trunk/Makefile.common
+++ b/software/public/smqueue/trunk/Makefile.common
@@ -23,21 +23,21 @@ GSM_INCLUDEDIR = $(top_srcdir)/GSM
 SMS_INCLUDEDIR = $(top_srcdir)/SMS
 GLOBALS_INCLUDEDIR = $(top_srcdir)/Globals
 SQLITE_INCLUDEDIR = $(top_srcdir)/sqlite3
-HLR_INCLUDEDIR = $(top_srcdir)/HLR
+SR_INCLUDEDIR = $(top_srcdir)/SR
 
 STD_DEFINES_AND_INCLUDES = \
 	-I$(COMMON_INCLUDEDIR) \
 	-I$(GSM_INCLUDEDIR) \
 	-I$(SMS_INCLUDEDIR) \
 	-I$(GLOBALS_INCLUDEDIR) \
-	-I$(HLR_INCLUDEDIR) \
+	-I$(SR_INCLUDEDIR) \
 	-I$(SQLITE_INCLUDEDIR)
 
 COMMON_LA = $(top_builddir)/CommonLibs/libcommon.la
 GSM_LA = $(top_builddir)/GSM/libGSM.la
 SMS_LA = $(top_builddir)/SMS/libSMS.la
 GLOBALS_LA = $(top_builddir)/Globals/libglobals.la
-HLR_LA = $(top_builddir)/HLR/libHLR.la
+SR_LA = $(top_builddir)/SR/libSR.la
 SQLITE_LA = $(top_builddir)/sqlite3/libsqlite.la -ldl
 
 MOSTLYCLEANFILES = *~
