--- a/software/public/openbts/trunk/TransceiverRAD1/Makefile.am
+++ b/software/public/openbts/trunk/TransceiverRAD1/Makefile.am
@@ -20,6 +20,8 @@
 
 include $(top_srcdir)/Makefile.common
 
+DESTDIR := 
+
 AM_CPPFLAGS = $(STD_DEFINES_AND_INCLUDES) $(USB_INCLUDES) $(WITH_INCLUDES)
 AM_CXXFLAGS = -DOMNITHREAD_POSIX=1 -lusb-1.0 -ldl -lpthread
 
@@ -105,6 +107,12 @@ sigProcLibTest_LDADD = \
 
 
 MOSTLYCLEANFILES +=
+
+install: transceiver
+	@mkdir -p "$(DESTDIR)/OpenBTS/"
+	install transceiver "$(DESTDIR)/OpenBTS/"
+	install ezusb.ihx "$(DESTDIR)/OpenBTS/"
+	install fpga.rbf "$(DESTDIR)/OpenBTS/"
 
 #radioInterface.cpp
 #ComplexTest.cpp
