--- a/software/public/smqueue/trunk/debian/control
+++ b/software/public/smqueue/trunk/debian/control
@@ -12,6 +12,6 @@ Section: comm
 Priority: optional
 Architecture: any
 Essential: no
-Depends: sqlite3, libosip2-4, libglib2.0-0, libgl1-mesa-glx, libc6-i686, libasound2, pkg-config, libpcre3, gawk
+Depends: sqlite3, libosip2-4, libglib2.0-0, libgl1-mesa-glx, libc6-i686, libasound2, pkg-config, libpcre3, gawk, sipauthserve-public
 Description: Public release of smqueue SMS server for use with OpenBTS.
 
