cleaned up makefiles, and now can is confflags="--with-uhd" dpkg-buildpackage -B to build the uhd version. There's still an issue with linking uhd though, I have to test on a real install.

--- a/software/public/openbts/trunk/GSM/Makefile.am
+++ b/software/public/openbts/trunk/GSM/Makefile.am
@@ -20,8 +20,8 @@
 
 include $(top_srcdir)/Makefile.common
 
-AM_CPPFLAGS = $(STD_DEFINES_AND_INCLUDES)
-#AM_CXXFLAGS = -O2 -g
+AM_CPPFLAGS = $(STD_DEFINES_AND_INCLUDES) $(USB_INCLUDES) $(WITH_INCLUDES) $(OPENBTS_CPPFLAGS)
+AM_CXXFLAGS = -Wall -pthread -ldl $(OPENBTS_CXXFLAGS)
 
 noinst_LTLIBRARIES = libGSM.la
 
