--- a/software/public/openbts/trunk/debian/control
+++ b/software/public/openbts/trunk/debian/control
@@ -13,4 +13,5 @@ Priority: optional
 Architecture: any
 Essential: no
 Depends: sqlite3, libosip2-4, libusb-1.0-0, libortp8, libglib2.0-0, libgl1-mesa-glx, libc6, libasound2, pkg-config, libpcre3, gawk, sipauthserve-public, uhd
+Conflicts: openbts
 Description: OpenBTS Public Release.
