--- a/software/public/smqueue/trunk/debian/control
+++ b/software/public/smqueue/trunk/debian/control
@@ -13,5 +13,6 @@ Priority: optional
 Architecture: any
 Essential: no
 Depends: sqlite3, libosip2-4, libglib2.0-0, libgl1-mesa-glx, libc6, libasound2, pkg-config, libpcre3, gawk, sipauthserve-public
+Conflicts: smqueue
 Description: Public release of smqueue SMS server for use with OpenBTS.
 
