--- a/software/public/smqueue/trunk/Makefile.common
+++ b/software/public/smqueue/trunk/Makefile.common
@@ -18,10 +18,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-#hack to get around symlink svn:externals in git -kurtis
-top_srcdir = $(abs_top_srcdir)
-top_builddir = $(abs_top_builddir)
-
 COMMON_INCLUDEDIR = $(top_srcdir)/CommonLibs
 GSM_INCLUDEDIR = $(top_srcdir)/GSM
 SMS_INCLUDEDIR = $(top_srcdir)/SMS
@@ -29,7 +25,10 @@ GLOBALS_INCLUDEDIR = $(top_srcdir)/Globals
 SQLITE_INCLUDEDIR = $(top_srcdir)/sqlite3
 SR_INCLUDEDIR = $(top_srcdir)/SR
 
+SVNDEV = -D'SVN_REV="$(shell svnversion -n $(top_builddir))"'
+
 STD_DEFINES_AND_INCLUDES = \
+	$(SVNDEV) \
 	-I$(COMMON_INCLUDEDIR) \
 	-I$(GSM_INCLUDEDIR) \
 	-I$(SMS_INCLUDEDIR) \
