Enable file playback module.

--- a/software/public/BRC2013/conf/yate.conf
+++ b/software/public/BRC2013/conf/yate.conf
@@ -18,7 +18,7 @@ cdrbuild.yate=yes
 cdrfile.yate=yes
 tonegen.yate=yes
 conference.yate=yes
-;wavefile.yate=yes
+wavefile.yate=yes
 ;callfork.yate=yes
 
 rmanager.yate=yes
