Playback message for emergency calls.

--- a/software/public/BRC2013/conf/regexroute.conf
+++ b/software/public/BRC2013/conf/regexroute.conf
@@ -6,5 +6,15 @@ route=40
 # test lines
 ^600$=tone/milliwatt
 ^601$=conf/echo;echo=true
-^602$=tone/info
 
+# Emergency messages
+^112$=wave/play//usr/src/bman/sounds/FindARange.gsm
+^911$=wave/play//usr/src/bman/sounds/FindARange.gsm
+# IF we need to record another...
+#^113$=wave/record//usr/src/bman/sounds/FindARange.gsm
+
+# Tropo lines - all 4-digit numbers
+^\(....\)$=sip/\1@papalegba.westhawk.co.uk:6061
+
+
+# Wired phones in the camp
