Play emergency message in a loop for 60 seconds.

--- a/software/public/BRC2013/conf/regexroute.conf
+++ b/software/public/BRC2013/conf/regexroute.conf
@@ -8,8 +8,8 @@ route=40
 ^601$=conf/echo;echo=true
 
 # Emergency messages
-^112$=wave/play//usr/src/bman/sounds/FindARange.gsm
-^911$=wave/play//usr/src/bman/sounds/FindARange.gsm
+^112$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
+^911$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
 # IF we need to record another...
 #^113$=wave/record//usr/src/bman/sounds/FindARange.gsm
 
