routing for tropo

--- a/software/public/BRC2013/conf/regexroute.conf
+++ b/software/public/BRC2013/conf/regexroute.conf
@@ -14,7 +14,10 @@ route=40
 #^113$=wave/record//usr/src/bman/sounds/FindARange.gsm
 
 # Tropo lines - all 4-digit numbers
-^\(....\)$=sip/\1@papalegba.westhawk.co.uk:6061
+# diana
+#^\(....\)$=sip/\1@173.255.118.53:6061
+#^\(........*\)$=sip/\1@173.255.118.53:6061
+#^\(....\)$=sip/\1@papalegba.westhawk.co.uk:6061
 
 
 # Wired phones in the camp
