starting to set up CDR generation

--- a/software/public/BRC2013/conf/yate.conf
+++ b/software/public/BRC2013/conf/yate.conf
@@ -15,7 +15,9 @@ yrtpchan.yate=yes
 accfile.yate=yes
 
 cdrbuild.yate=yes
+cdrcombine.yate=yes
 cdrfile.yate=yes
+register.yate=yes
 tonegen.yate=yes
 conference.yate=yes
 wavefile.yate=yes
