Updated welcome message and IP addresses for BRC environment.

--- a/software/public/BRC2013/conf/register.conf
+++ b/software/public/BRC2013/conf/register.conf
@@ -142,11 +142,18 @@ account=bman
 ; billtime=INTERVAL '${billtime} s',ringtime=INTERVAL '${ringtime} s',status='${status}',\
 ; reason='${reason}',ended=true WHERE chan='${chan}' AND time=TIMESTAMP 'EPOCH' + INTERVAL '${time} s'
 
-cdr_combined=INSERT INTO cdr VALUES(TIMESTAMP 'EPOCH' + INTERVAL '${time} s','${chan}',\
- '${address}','${caller}','${called}',INTERVAL '${duration} s',INTERVAL '${billtime} s',\
- INTERVAL '${ringtime} s','${status}','${reason}','${out_leg.chan}','${out_leg.address}',\
- INTERVAL '${out_leg.billtime} s',INTERVAL '${out_leg.ringtime} s',\
- INTERVAL '${out_leg.duration} s','${out_leg.reason}'
+;cdr_combined=INSERT INTO cdr VALUES(TIMESTAMP 'EPOCH' + INTERVAL '${time} s','${chan}',\
+; '${address}','${caller}','${called}',INTERVAL '${duration} s',INTERVAL '${billtime} s',\
+; INTERVAL '${ringtime} s','${status}','${reason}','${out_leg.chan}','${out_leg.address}',\
+; INTERVAL '${out_leg.billtime} s',INTERVAL '${out_leg.ringtime} s',\
+; INTERVAL '${out_leg.duration} s','${out_leg.reason}'
+
+cdr_combined=INSERT INTO cdr VALUES(from_unixtime(${time}),'${chan}','${billid}',\
+ '${address}','${caller}','${called}',sec_to_time(${duration}),sec_to_time(${billtime}),\
+ sec_to_time(${ringtime}),'${status}','${reason}','${out_leg.chan}','${out_leg.address}',\
+ sec_to_time(${out_leg.billtime}),sec_to_time(${out_leg.ringtime}),\
+ sec_to_time(${out_leg.duration}),'${out_leg.reason}')
+
 
 
 [linetracker]
