- hook up deskphone, route emergency calls more intelligently

--- a/software/public/BRC2013/conf/regexroute.conf
+++ b/software/public/BRC2013/conf/regexroute.conf
@@ -9,6 +9,8 @@
 ^601$=conf/echo;echo=true
 
 # Emergency messages
+^sos$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
+^110$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
 ^112$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
 ^113$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
 ^114$=wave/play//usr/src/bman/sounds/FindARange.gsm;autorepeat=true;timeout=60000
@@ -27,4 +29,4 @@
 
 # Dummy example
 #^7072082622$=sip/7072082622@snom1_ip_address:5060
-^12345678$=sip/IMSI000000000000000@10.0.5.211:5060
+^1234567$=sip/sip:IMSI000000000000000@10.0.5.75:5060
