--- a/software/public/openbts/branches/P3.1/debian/control
+++ b/software/public/openbts/branches/P3.1/debian/control
@@ -1,5 +1,4 @@
 Source: openbts-public
-Provides: openbts
 Section: comm
 Priority: optional
 Maintainer: Range Networks, Inc. <info@rangenetworks.com>
@@ -8,11 +7,10 @@ Build-Depends: build-essential, debhelper (>= 7), libosip2-dev, pkg-config, auto
 Standards-Version: 3.7.3
 
 Package: openbts-public
-Provides: openbts
-Version: TRUNK
+Version: P3.1TRUNK
 Section: comm
 Priority: optional
-Architecture: any
+Architecture: i386
 Essential: no
-Depends: sqlite3 (>= 3.7), libosip2-4, libusb-1.0-0, libortp8 (<= 0.20), libglib2.0-0, libgl1-mesa-glx, libc6, libasound2, pkg-config, libpcre3, gawk, screen
+Depends: sqlite3, libosip2-4, libusb-1.0-0, libortp8, libglib2.0-0, libgl1-mesa-glx, libc6-i686, libasound2, pkg-config, libpcre3, gawk, screen
 Description: OpenBTS Public software.
