--- a/software/public/openbts/branches/P3.1/debian/rules
+++ b/software/public/openbts/branches/P3.1/debian/rules
@@ -108,8 +108,7 @@ binary-common:
 #	dh_perl
 	dh_makeshlibs
 	dh_installdeb
-#	dh_shlibdeps
-	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
+	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
