--- a/software/public/openbts/tags/rP3.1.3/configure.ac
+++ b/software/public/openbts/tags/rP3.1.3/configure.ac
@@ -18,7 +18,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.
 dnl
 
-AC_INIT(openbts,3.1TRUNK)
+AC_INIT(openbts,rP3.1.3)
 AC_PREREQ(2.57)
 AC_CONFIG_SRCDIR([config/Makefile.am])
 AC_CONFIG_AUX_DIR([.])	
