Transceiver52M: Set resampling option automatically based on device
Remove the built time resampling selection and link both options.
Move the normal push/pullBuffer() calls back to the base class and
overload them in the inherited resampling class.

USRP2/N2xx devices are the only devices that require resampling so
return that resampling is necessary on the device open(), which is
the point at which the device type will be known.

The GSM transceiver only operates at a whole number multiple of
the GSM rate and doesn't care about the actual device rate and
if resampling is used. Therefore GSM specific portion of the
transceiver should only need to submit the samples-per-symbol
value to the device interface.

Then, the device should be able to determine the appropriate
sample rate (400 ksps or 270.833 ksps) and if resampling is
appropriate.

Signed-off-by: Thomas Tsou <tom@tsou.cc>

--- a/software/public/openbts/trunk/Transceiver52M/Makefile.am
+++ b/software/public/openbts/trunk/Transceiver52M/Makefile.am
@@ -57,15 +57,9 @@ COMMON_SOURCES = \
 	Transceiver.cpp \
 	DummyLoad.cpp
 
-if RESAMPLE
 libtransceiver_la_SOURCES = \
 	$(COMMON_SOURCES) \
-	radioIOResamp.cpp
-else
-libtransceiver_la_SOURCES = \
-	$(COMMON_SOURCES) \
-	radioIO.cpp
-endif
+	radioInterfaceResamp.cpp
 
 noinst_PROGRAMS = \
 	USRPping \
