Transceiver52M: Replace resampler with SSE enabled implementation
Replace the polyphase filter and resampler with a separate
implementation using SSE enabled convolution. The USRP2 (including
derived devices N200, N210) are the only supported devices that
require sample rate conversion, so set the default resampling
parameters for the 100 MHz FPGA clock. This changes the previous
resampling ratios.

  270.833 kHz -> 400 kHz      (65 / 96)
  270.833 kHz -> 390.625 kHz  (52 / 75)

The new resampling factor uses a USRP resampling factor of 256
instead of 250. On the device, this allows two halfband filters to
be used rather than one. The end result is reduced distortial and
aliasing effecits from CIC filter rolloff.

B100 and USRP1 will no be supported at 400 ksps with these changes.

Signed-off-by: Thomas Tsou <tom@tsou.cc>

--- a/software/public/openbts/trunk/Transceiver52M/Makefile.am
+++ b/software/public/openbts/trunk/Transceiver52M/Makefile.am
@@ -59,6 +59,7 @@ COMMON_SOURCES = \
 
 libtransceiver_la_SOURCES = \
 	$(COMMON_SOURCES) \
+	Resampler.cpp \
 	radioInterfaceResamp.cpp
 
 noinst_PROGRAMS = \
@@ -78,6 +79,7 @@ noinst_HEADERS = \
 	DummyLoad.h \
 	rcvLPF_651.h \
 	sendLPF_961.h \
+	Resampler.h \
 	convolve.h
 
 USRPping_SOURCES = USRPping.cpp
